<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@+id/navigation_mapping">

    <fragment
        android:id="@+id/navigation_mapping"
        android:name="com.example.indoortracking.ui.mapping.MappingFragment"
        android:label="@string/title_mapping"
        tools:layout="@layout/fragment_mapping" />

    <fragment
        android:id="@+id/navigation_testing"
        android:name="com.example.indoortracking.ui.testing.TestingFragment"
        android:label="@string/title_testing"
        tools:layout="@layout/fragment_testing" />

    <fragment
        android:id="@+id/navigation_floor_plans"
        android:name="com.example.indoortracking.ui.floorplan.FloorPlanFragment"
        android:label="@string/floor_plans"
        tools:layout="@layout/floor_plan_fragment" />

    <fragment
        android:id="@+id/logout"
        android:name="com.example.indoortracking.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout"/>

</navigation>