<resources>
    <string name="app_name">Indoor Tracking</string>
    <string name="title_mapping">Mapping</string>
    <string name="title_testing">Testing</string>
    <string name="enable_scanning">Enable scanning</string>
    <string name="disable_scanning">Disable Scanning</string>
    <string name="upload">Upload</string>
    <string name="floor_plans">Floor Plans</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
...
